--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+flask = "^3.0.0"
+python-dotenv = "^1.0.0"
+langchain = "^0.0.345"
+openai = "^1.3.7"
 
 
 [build-system]
