--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,6 @@
 APP_SECRET_KEY=YOUR_APP_SECRET_KEY
 AZURE_OPENAI_KEY = YOUR_AZURE_OPENAI_KEY
 AZURE_OPENAI_ENDPOINT = YOUR_AZURE_OPENAI_ENDPOINT
+
+AZURE_W_OPENAI_KEY=YOUR_AZURE_W_OPENAI_KEY
+AZURE_W_OPENAI_ENDPOINT=YOUR_AZURE_W_OPENAI_ENDPOINT
