--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ flask = "^3.0.0"
 python-dotenv = "^1.0.0"
 langchain = "^0.0.345"
 openai = "^1.3.7"
+fitz = "^0.0.1.dev2"
+azure-storage-blob = "^12.19.0"
 
 
 [build-system]
